<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_back_button"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginVertical="20dp"
            android:drawableStart="@drawable/ic_baseline_arrow_back_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginStart="10dp"
            android:text="Change Password"
            style="@style/TextView.thirdSizeText"
            android:textColor="#FFFFFF"/>
    </LinearLayout>

    <TextView
        android:id="@+id/changePasswordDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changePasswordDesc"
        style="@style/TextView.fifthSizeText"
        android:textColor="@color/mainTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="15dp"/>

    <EditText
        android:id="@+id/currentPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/currentPassword"
        android:textColorHint="@color/textColorBlack"
        android:textColor="@color/textColorBlack"
        style="@style/TextView.fifthSizeText"
        app:layout_constraintTop_toBottomOf="@id/changePasswordDesc"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="15dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newPassword"
        android:textColorHint="@color/textColorBlack"
        android:textColor="@color/textColorBlack"
        style="@style/TextView.fifthSizeText"
        app:layout_constraintTop_toBottomOf="@id/currentPassword"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="15dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirmPassword"
        android:textColorHint="@color/textColorBlack"
        android:textColor="@color/textColorBlack"
        style="@style/TextView.fifthSizeText"
        app:layout_constraintTop_toBottomOf="@id/newPassword"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="15dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        style="@style/TextView.fourthSizeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/background_button_auth_active"
        android:paddingHorizontal="24dp"
        android:paddingVertical="15dp"
        android:text="Continue"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>