<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor"
    tools:context=".ui.layout.main.profile.PersonalProfileFragment">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:background="@drawable/background_back_button">

        <LinearLayout
            android:id="@+id/titleInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginVertical="20dp"
                android:drawableStart="@drawable/ic_baseline_arrow_back_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginStart="10dp"
                android:text="TopUp"
                style="@style/TextView.thirdSizeText"
                android:textColor="#FFFFFF"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/bacground_item_transaction_home">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_add_24"
                android:background="@drawable/background_button_auth"
                android:padding="5dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="15dp"
                android:layout_marginEnd="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Virtual Account Number"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/virtualAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Virtual Account Number"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/howTopUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/howToTpUp"
        style="@style/TextView.fifthSizeText"
        android:textStyle="bold"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/howTopUp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <LinearLayout
                android:id="@+id/one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:background="@drawable/bacground_item_transaction_home"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="1"
                    android:textColor="@color/darkGrey"
                    style="@style/TextView.fourthSizeText"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="15dp"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/one"
                        style="@style/TextView.fourthSizeText"
                        android:lineSpacingExtra="10dp"
                        android:textColor="@color/darkGrey"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:padding="15dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/bacground_item_transaction_home"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/one">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="2"
                    android:textColor="@color/darkGrey"
                    style="@style/TextView.fourthSizeText"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="15dp"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/secondStepDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/two"
                        style="@style/TextView.fourthSizeText"
                        android:lineSpacingExtra="10dp"
                        android:textColor="@color/darkGrey"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/three"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:padding="15dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/bacground_item_transaction_home"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/two">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="3"
                    android:textColor="@color/darkGrey"
                    style="@style/TextView.fourthSizeText"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="15dp"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/three"
                        style="@style/TextView.fourthSizeText"
                        android:lineSpacingExtra="10dp"
                        android:textColor="@color/darkGrey"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/four"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:padding="15dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/bacground_item_transaction_home"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/three">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="4"
                    android:textColor="@color/darkGrey"
                    style="@style/TextView.fourthSizeText"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="15dp"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/four"
                        style="@style/TextView.fourthSizeText"
                        android:lineSpacingExtra="10dp"
                        android:textColor="@color/darkGrey"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/five"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:padding="15dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/bacground_item_transaction_home"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/four">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="5"
                    android:textColor="@color/darkGrey"
                    style="@style/TextView.fourthSizeText"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="15dp"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/five"
                        style="@style/TextView.fourthSizeText"
                        android:lineSpacingExtra="10dp"
                        android:textColor="@color/darkGrey"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/six"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:padding="15dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/bacground_item_transaction_home"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/five">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="6"
                    android:textColor="@color/darkGrey"
                    style="@style/TextView.fourthSizeText"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="15dp"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/six"
                        style="@style/TextView.fourthSizeText"
                        android:lineSpacingExtra="10dp"
                        android:textColor="@color/darkGrey"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/seven"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:padding="15dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/bacground_item_transaction_home"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/six">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="7"
                    android:textColor="@color/darkGrey"
                    style="@style/TextView.fourthSizeText"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="15dp"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/seven"
                        style="@style/TextView.fourthSizeText"
                        android:lineSpacingExtra="10dp"
                        android:textColor="@color/darkGrey"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:padding="15dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/bacground_item_transaction_home"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/seven">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="8"
                    android:textColor="@color/darkGrey"
                    style="@style/TextView.fourthSizeText"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="15dp"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eight"
                        style="@style/TextView.fourthSizeText"
                        android:lineSpacingExtra="10dp"
                        android:textColor="@color/darkGrey"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>